# myk-audio-editor

./: CMakeLists.txt  README.md
libs/: README.md
src/: AudioEngine.cpp  AudioEngine.h  AudioExporter.cpp  AudioExporter.h  MainController.cpp  MainController.h  NonDestructiveEditorComponent.h  common_sources.cpp  main.cpp
